src/test/ui/consts/const-eval/shift_overflow.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/shift_overflow.rs:3:9
   |
LL |     X = 1 << ((u32::MAX as u64) + 1),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to shift left by `4294967296_u64`, which would overflow

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
